--- a/MPSL/src/main/webapp/style.css
+++ b/MPSL/src/main/webapp/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-    background-image: url(images/background-img.jpg);
+    background-image: url(images/background-img2.jpg);
     background-size: cover;
     align-items: center;
     display: flex;
