--- a/MPSL/src/main/webapp/style.css
+++ b/MPSL/src/main/webapp/style.css
@@ -1,231 +1,141 @@
 @charset "UTF-8";
 
-body {
-    background-image: url(images/background-img2.jpg);
-    background-size: cover;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    min-height: 100vh;
+td img {
+    width: 36px;
+    height: 36px;
+    margin-right: .5rem;
+    border-radius: 50%;
+
+    vertical-align: middle;
 }
 
-* {
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-    color: white;
-    box-sizing: border-box;
+table, th, td {
+    padding: 1rem;
 }
 
-/* logo */
-.logo {
-	margin: 10px 0 5px 5px;
-}
-.logo-img {
-	cursor: pointer;
-}
+main.table {
+    width: 70vw;
+    height: 60vh;
+    background-color: #fff5;
+    margin-left: 10vw;
 
-/* Side Menu */
-.side-bar {
-    background: rgba(255,255,255,0.1);
-    backdrop-filter: blur(15px);
-    width: 250px;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow-y: auto;
-}
-.side-bar .menu {
-    width: 100%;
-    margin-top: 80px;
-}
-.side-bar .menu .item {
-    position: relative;
-    cursor: pointer;
-}
-.side-bar .menu .item a {
-    color: rgb(36, 36,36);
-    font-size: 16px;
-    text-decoration: none;
-    display: block;
-    padding: 5px 30px;
-    line-height: 60px;
-} 
-.side-bar .menu .item a:hover {
-    background: #8621F8;
-    transition: 0.3s ease;
-}
-.side-bar .menu .item i {
-    margin-right: 15px;
-}
-.side-bar .menu .item a .dropdown {
-    position: absolute;
-    right: 0;
-    margin: 20px;
-    transition: 0.3s ease;
-}
-.side-bar .menu .item .sub-menu {
-    background: rgba(255,255,255,0.1);
-}
-.side-bar .menu .item .sub-menu a{
-    padding-left: 80px;
-}
-.footer {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-}
+    backdrop-filter: blur(7px);
+    box-shadow: 0 .4rem .8rem #0005;
 
-
-/* Login Page */
-form {
-    text-align: center;
-    width: 400px;
-    height: 450px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    border: 2px solid white;
-    border-radius: 20px;
-    backdrop-filter: blur(30px);
-}
-
-form h1 {
-    font-size: 40px;
-}
-
-form ion-icon {
-    cursor: pointer;
-    font-size: 30px;
-}
-
-.input-box {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 80%;
-    border-bottom: 2px solid white;
-    margin: 30px 0;
-}
-
-.input-box input:focus ~ label,
-.input-box input:valid ~ label {
-    transform: translateY(-30px);
-}
-
-.input-box label {
-    transition: .3s;
-    user-select: none;
-    position: absolute;
-}
-
-.input-box input {
-    background: none;
-    outline: none;
-    border: none;
-    width: 75%;
-    height: 25px;
-    z-index: 2;
-    font-size: 20px;
-    color: white;
-}
-
-.icon {
-    transform: rotate(-135deg);
-}
-
-.light {
-    display: none;
-    position: absolute;
-    width: 90%;
-    height: 25px;
-    left: 0;
-    bottom: 2px;
-    background-color: white;
-    border-radius: 4px;
-    border-top-right-radius: 50%;
-    border-bottom-right-radius: 50%;
-}
-
-.checkbox {
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-}
-
-.checkbox div{
-    font-size: 17px;
-    display: flex;
-    align-items: start;
-}
-.checkbox input {
-    cursor: pointer;
-    width: 15px;
-    height: 15px;
-    margin: 1px 5px 0px 0px;
-}
-.checkbox label,.checkbox h4 {
-    cursor: pointer;
-}
-form .sub-button {
-    position: relative;
-    width: 80%;
-    height: 30px;
-    cursor: pointer;
-    border-radius: 20px;
-    margin: 15px 0px;
-    border: 2px solid white;
-    font-size: 18px;
-    background: none;
-    transition: .5s;
     overflow: hidden;
 }
-form .sub-button::before, form .sub-button::after {
-    content: "";
-    position: absolute;
-    background-color: white;
-    width: 0;
-    height: 100%;
-    top: 0;
-    border-radius: 20px;
-    transition: .5s;
-    z-index: -1;
-}
-form .sub-button::before {
-    left: 0;
-}
-form .sub-button::after {
-    right: 0;
-}
-form .sub-button:hover::before,form .sub-button:hover::after {
-    width: 60%;
-}
-form .sub-button:hover {
-    color: black;
-}
-.Register-box {
-    margin-top: 15px;
-    font-size: 18px;
-}
-.Register-box {
-    cursor: pointer;
+
+.table__header {
+    width: 100%;
+    height: 10%;
+    background-color: #fff4;
+    padding: 0.8rem 1rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.register {
-    text-align: center;
-    width: 400px;
-    height: 600px;
-    position: relative;
+
+.table__header .input-group {
+    width: 35%;
+    height: 100%;
+    background-color: #fff5;
+    padding: 0 .8rem;
+    border-radius: 2rem;
+
     display: flex;
-    align-items: center;
     justify-content: center;
-    flex-direction: column;
-    border: 2px solid white;
-    border-radius: 20px;
-    backdrop-filter: blur(30px);
+    align-items: center;
+
+    transition: .2s;
+}
+
+.table__header .input-group:hover {
+    width: 45%;
+    background-color: #fff8;
+    box-shadow: 0 .1rem .4rem #0002;
+
+}
+
+.table__header .input-group img {
+    width: 1.2rem;
+    height: 1.2rem;
+}
+.table__header .input-group input {
+    width: 100%;
+    padding: 0 .5rem 0 .3rem;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+.table__body::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+}
+.table__body::-webkit-scrollbar-thumb {
+    border-radius: .5rem;
+    background-color: #0004;
+    visibility: hidden;
+}
+.table__body:hover::-webkit-scrollbar-thumb {
+    visibility: visible;
+
+}
+table {
+    width: 100%;
+}
+
+.table__body {
+    width: 95%;
+    max-height: (89% - .8rem);
+    background-color: #fffb;
+
+    margin: .8rem auto;
+    border-radius: .6rem;
+
+    overflow: auto;
+
+}
+
+table, th, td {
+    border-collapse: collapse;
+    padding: 1rem;
+    text-align: left;
+}
+
+thead th {
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: #d5d1defe;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #0000000b;
+}
+
+tbody tr:hover {
+    background-color: #fff6 ;
+}
+
+.status {
+    padding: 0.4rem 0;
+    border-radius: 2rem;
+    text-align: center;
+}
+
+#Mobile {
+    background-color: #d893a3;
+}
+
+#PC {
+    background-color: #6fcaea;
+}
+
+@media (max-width: 1000px) {
+    td:not(:first-of-type) {
+        min-width: 12.1rem;
+    }
 }
